working cluster sharding with persistent actors

--- a/cluster2/cluster-2.conf
+++ b/cluster2/cluster-2.conf
@@ -97,11 +97,70 @@ akka {
       }
       default-mailbox {
         mailbox-type = "com.netflix.atlas.akka.UnboundedMeteredMailbox"
-        path-pattern = ${atlas.akka.path-pattern}
+        //path-pattern = ${atlas.akka.path-pattern}
+        path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
       }
       cluster-mailbox {
         mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
-        path-pattern = ${atlas.akka.path-pattern}
+        //path-pattern = ${atlas.akka.path-pattern}
+        path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
+      }
+      serializers {
+        kryo = "com.twitter.chill.akka.AkkaSerializer"
+      }
+      serialization-bindings {
+        "com.netflix.atlas.core.model.Block" = kryo
+        "com.netflix.atlas.core.model.CollectorStats" = kryo
+        "com.netflix.atlas.core.model.ConsolidationFunction" = kryo
+        "com.netflix.atlas.core.model.DataExpr" = kryo
+        "com.netflix.atlas.core.model.Datapoint" = kryo
+        "com.netflix.atlas.core.model.DataVocabulary" = kryo
+        "com.netflix.atlas.core.model.DefaultSettings" = kryo
+        "com.netflix.atlas.core.model.DsType" = kryo
+        "com.netflix.atlas.core.model.EvalContext" = kryo
+        "com.netflix.atlas.core.model.Expr" = kryo
+        "com.netflix.atlas.core.model.FilterExpr" = kryo
+        "com.netflix.atlas.core.model.FilterVocabulary" = kryo
+        "com.netflix.atlas.core.model.MathExpr" = kryo
+        "com.netflix.atlas.core.model.MathVocabulary" = kryo
+        "com.netflix.atlas.core.model.ModelExtractors" = kryo
+        "com.netflix.atlas.core.model.package" = kryo
+        "com.netflix.atlas.core.model.Query" = kryo
+        "com.netflix.atlas.core.model.QueryVocabulary" = kryo
+        "com.netflix.atlas.core.model.ResultSet" = kryo
+        "com.netflix.atlas.core.model.StatefulExpr" = kryo
+        "com.netflix.atlas.core.model.StatefulVocabulary" = kryo
+        "com.netflix.atlas.core.model.StyleExpr" = kryo
+        "com.netflix.atlas.core.model.StyleVocabulary" = kryo
+        "com.netflix.atlas.core.model.SummaryStats" = kryo
+        "com.netflix.atlas.core.model.Tag" = kryo
+        "com.netflix.atlas.core.model.TaggedItem" = kryo
+        "com.netflix.atlas.core.model.TagKey" = kryo
+        "com.netflix.atlas.core.model.TimeSeq" = kryo
+        "com.netflix.atlas.core.model.TimeSeries" = kryo
+        "com.netflix.atlas.core.model.TimeSeriesExpr" = kryo
+        "com.netflix.atlas.core.model.FunctionTimeSeq" = kryo
+        "com.netflix.atlas.core.model.ArrayTimeSeq" = kryo
+        "com.netflix.atlas.core.model.OffsetTimeSeq" = kryo
+        "com.netflix.atlas.core.model.MapStepTimeSeq" = kryo
+        "com.netflix.atlas.core.model.BinaryOpTimeSeq" = kryo
+        "com.netflix.atlas.core.model.UnaryOpTimeSeq" = kryo
+        "com.netflix.atlas.core.model.ConsolidationFunction" = kryo
+        "com.netflix.atlas.core.model.DsType" = kryo
+        "com.netflix.atlas.core.util.SmallHashMap" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor" = kryo
+        "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
+        "com.netflix.atlas.webapi.DatabaseProvider" = kryo
+        "com.netflix.atlas.webapi.ExprApi" = kryo
+        "com.netflix.atlas.webapi.GraphApi" = kryo
+        "com.netflix.atlas.webapi.GraphRequestActor" = kryo
+        "com.netflix.atlas.webapi.PublishApi" = kryo
+        "com.netflix.atlas.webapi.RenderApi" = kryo
+        "com.netflix.atlas.webapi.TagsApi" = kryo
+        "com.netflix.atlas.webapi.TagsRequestActor" = kryo
+        "com.netflix.atlas.akka.ClusterMailbox" = kryo
+        //"spray.http.HttpResponse" = kryo
+        "akka.actor.ActorRef" = kryo
       }
       //default-mailbox {
       //  mailbox-type = "akka.dispatch.BoundedDequeBasedMailbox"
@@ -139,7 +198,9 @@ akka {
     //]
      // "akka.tcp://atlas@127.0.0.1:2551",
     seed-nodes = [
-      "akka.tcp://atlas@127.0.0.1:2552"]
+      "akka.tcp://atlas@127.0.0.1:2552"
+      "akka.tcp://atlas@127.0.0.1:2553"
+    ]
 
     auto-down-unreachable-after = 10s
   }
@@ -147,7 +208,8 @@ akka {
 
 cluster-mailbox {
   mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
-  path-pattern = ${atlas.akka.path-pattern}
+  //path-pattern = ${atlas.akka.path-pattern}
+  path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
 }
 
 
