--- a/memory.conf
+++ b/memory.conf
@@ -97,11 +97,40 @@ akka {
       }
       default-mailbox {
         mailbox-type = "com.netflix.atlas.akka.UnboundedMeteredMailbox"
-        path-pattern = ${atlas.akka.path-pattern}
+        //path-pattern = ${atlas.akka.path-pattern}
+        path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
       }
       cluster-mailbox {
         mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
-        path-pattern = ${atlas.akka.path-pattern}
+        path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
+      }
+      serializers {
+        kryo = "com.twitter.chill.akka.AkkaSerializer"
+      }
+      serialization-bindings {
+        "com.netflix.atlas.core.model.TimeSeq" = kryo
+        "com.netflix.atlas.core.model.FunctionTimeSeq" = kryo
+        "com.netflix.atlas.core.model.ArrayTimeSeq" = kryo
+        "com.netflix.atlas.core.model.OffsetTimeSeq" = kryo
+        "com.netflix.atlas.core.model.MapStepTimeSeq" = kryo
+        "com.netflix.atlas.core.model.BinaryOpTimeSeq" = kryo
+        "com.netflix.atlas.core.model.UnaryOpTimeSeq" = kryo
+        "com.netflix.atlas.core.model.ConsolidationFunction" = kryo
+        "com.netflix.atlas.core.model.DsType" = kryo
+        "com.netflix.atlas.core.util.SmallHashMap" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor" = kryo
+        "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
+        "com.netflix.atlas.webapi.DatabaseProvider" = kryo
+        "com.netflix.atlas.webapi.ExprApi" = kryo
+        "com.netflix.atlas.webapi.GraphApi" = kryo
+        "com.netflix.atlas.webapi.GraphRequestActor" = kryo
+        "com.netflix.atlas.webapi.PublishApi" = kryo
+        "com.netflix.atlas.webapi.RenderApi" = kryo
+        "com.netflix.atlas.webapi.TagsApi" = kryo
+        "com.netflix.atlas.webapi.TagsRequestActor" = kryo
+        "com.netflix.atlas.akka.ClusterMailbox" = kryo
+        //"spray.http.HttpResponse" = kryo
+        "akka.actor.ActorRef" = kryo
       }
       //default-mailbox {
       //  mailbox-type = "akka.dispatch.BoundedDequeBasedMailbox"
@@ -139,7 +168,9 @@ akka {
     //]
      // "akka.tcp://atlas@127.0.0.1:2551",
     seed-nodes = [
-      "akka.tcp://atlas@127.0.0.1:2552"]
+      "akka.tcp://atlas@127.0.0.1:2552"
+      "akka.tcp://atlas@127.0.0.1:2553"
+    ]
 
     auto-down-unreachable-after = 10s
   }
@@ -147,7 +178,8 @@ akka {
 
 cluster-mailbox {
   mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
-  path-pattern = ${atlas.akka.path-pattern}
+  // path-pattern = ${atlas.akka.path-pattern}
+  path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
 }
 
 
