--- a/memory.conf
+++ b/memory.conf
@@ -97,12 +97,13 @@ akka {
       }
       default-mailbox {
         mailbox-type = "com.netflix.atlas.akka.UnboundedMeteredMailbox"
-        //path-pattern = ${atlas.akka.path-pattern}
-        path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
+        path-pattern = ${atlas.akka.path-pattern}
+        //path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
       }
       cluster-mailbox {
         mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
-        path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
+        path-pattern = ${atlas.akka.path-pattern}
+        //path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
       }
       serializers {
         kryo = "com.twitter.chill.akka.AkkaSerializer"
@@ -178,8 +179,8 @@ akka {
 
 cluster-mailbox {
   mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
-  // path-pattern = ${atlas.akka.path-pattern}
-  path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
+  path-pattern = ${atlas.akka.path-pattern}
+  //path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
 }
 
 
