sharding now works and all queries verified

--- a/cluster-example/cluster1/cluster1.conf
+++ b/cluster-example/cluster1/cluster1.conf
@@ -10,7 +10,6 @@ atlas {
 
     db {
       class = "com.netflix.atlas.core.db.MemoryDatabase"
-      //class = "com.netflix.atlas.core.db.StaticDatabase"
 
       // How often to rebuild the index for the memory database
       rebuild-frequency = 5s
@@ -26,10 +25,6 @@ atlas {
   webapi {
     tags {
       max-limit = 1000000
-    }
-    main {
-      //port = 7111
-      //port = ${?atlas.environment.cf_port}
     }
 
     graph {
@@ -79,7 +74,7 @@ atlas {
       "com.netflix.atlas.akka.ConfigApi",
       "com.netflix.atlas.akka.StaticPages"
     ]
-    port = 8101
+    port = 7101
   }
 }
 
@@ -98,12 +93,10 @@ akka {
       default-mailbox {
         mailbox-type = "com.netflix.atlas.akka.UnboundedMeteredMailbox"
         path-pattern = ${atlas.akka.path-pattern}
-        //path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
       }
       cluster-mailbox {
         mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
         path-pattern = ${atlas.akka.path-pattern}
-        //path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
       }
       serializers {
         kryo = "com.twitter.chill.akka.AkkaSerializer"
@@ -149,54 +142,39 @@ akka {
         "com.netflix.atlas.core.model.DsType" = kryo
         "com.netflix.atlas.core.util.SmallHashMap" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardData" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedData" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTags" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagKeys" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagValues" = kryo
         "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
         "com.netflix.atlas.webapi.DatabaseProvider" = kryo
         "com.netflix.atlas.webapi.ExprApi" = kryo
         "com.netflix.atlas.webapi.GraphApi" = kryo
         "com.netflix.atlas.webapi.GraphRequestActor" = kryo
+        "com.netflix.atlas.webapi.GraphApi$DataResponse" = kryo
         "com.netflix.atlas.webapi.PublishApi" = kryo
         "com.netflix.atlas.webapi.RenderApi" = kryo
         "com.netflix.atlas.webapi.TagsApi" = kryo
+        "com.netflix.atlas.webapi.TagsApi$ValueListResponse" = kryo
+        "com.netflix.atlas.webapi.TagsApi$KeyListResponse" = kryo
+        "com.netflix.atlas.webapi.TagsApi$TagListResponse" = kryo
         "com.netflix.atlas.webapi.TagsRequestActor" = kryo
         "com.netflix.atlas.akka.ClusterMailbox" = kryo
-        //"spray.http.HttpResponse" = kryo
         "akka.actor.ActorRef" = kryo
       }
-      //default-mailbox {
-      //  mailbox-type = "akka.dispatch.BoundedDequeBasedMailbox"
-      //  mailbox-capacity = 2000
-      //  mailbox-push-timeout-time = 5s
-      //  path-pattern = ${atlas.akka.path-pattern}
-      //  requirements {
-      //    "akka.dispatch.BoundedDequeBasedMessageQueueSemantics" = akka.actor.mailbox.bounded-deque-based
-      //  }
-      //}
-      //default-mailbox {
-      //  mailbox-type = "akka.dispatch.BoundedDequeBasedMailbox"
-      //  mailbox-capacity = 2000
-      //  mailbox-push-timeout-time = 5s
-      //  path-pattern = ${atlas.akka.path-pattern}
-      //  //requirements {
-      //  //  "akka.dispatch.BoundedDequeBasedMessageQueueSemantics" = akka.actor.mailbox.bounded-deque-based
-      //  //}
-      //}
   }
 
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 2553
+      port = 2552
     }
   }
 
   cluster {
     roles = [ "front-end", "back-end" ]
-    //seed-nodes = [
-    //  "akka.tcp://"${application.name}"@"${clustering.ip}":2551"
-    //  "akka.tcp://"${application.name}"@"${clustering.ip}":2552"
-    //]
-     // "akka.tcp://atlas@127.0.0.1:2551",
     seed-nodes = [
       "akka.tcp://atlas@127.0.0.1:2552"
       "akka.tcp://atlas@127.0.0.1:2553"
@@ -209,11 +187,9 @@ akka {
 cluster-mailbox {
   mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
   path-pattern = ${atlas.akka.path-pattern}
-  //path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
 }
 
 
-//akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
