--- a/cluster-example/cluster2/cluster2.conf
+++ b/cluster-example/cluster2/cluster2.conf
@@ -10,7 +10,6 @@ atlas {
 
     db {
       class = "com.netflix.atlas.core.db.MemoryDatabase"
-      //class = "com.netflix.atlas.core.db.StaticDatabase"
 
       // How often to rebuild the index for the memory database
       rebuild-frequency = 5s
@@ -26,10 +25,6 @@ atlas {
   webapi {
     tags {
       max-limit = 1000000
-    }
-    main {
-      port = 7111
-      //port = ${?atlas.environment.cf_port}
     }
 
     graph {
@@ -79,7 +74,7 @@ atlas {
       "com.netflix.atlas.akka.ConfigApi",
       "com.netflix.atlas.akka.StaticPages"
     ]
-    port = 7101
+    port = 8101
   }
 }
 
@@ -97,18 +92,46 @@ akka {
       }
       default-mailbox {
         mailbox-type = "com.netflix.atlas.akka.UnboundedMeteredMailbox"
-        //path-pattern = ${atlas.akka.path-pattern}
-        path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
+        path-pattern = ${atlas.akka.path-pattern}
       }
       cluster-mailbox {
         mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
-        path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
+        path-pattern = ${atlas.akka.path-pattern}
       }
       serializers {
         kryo = "com.twitter.chill.akka.AkkaSerializer"
       }
       serialization-bindings {
+        "com.netflix.atlas.core.model.Block" = kryo
+        "com.netflix.atlas.core.model.CollectorStats" = kryo
+        "com.netflix.atlas.core.model.ConsolidationFunction" = kryo
+        "com.netflix.atlas.core.model.DataExpr" = kryo
+        "com.netflix.atlas.core.model.Datapoint" = kryo
+        "com.netflix.atlas.core.model.DataVocabulary" = kryo
+        "com.netflix.atlas.core.model.DefaultSettings" = kryo
+        "com.netflix.atlas.core.model.DsType" = kryo
+        "com.netflix.atlas.core.model.EvalContext" = kryo
+        "com.netflix.atlas.core.model.Expr" = kryo
+        "com.netflix.atlas.core.model.FilterExpr" = kryo
+        "com.netflix.atlas.core.model.FilterVocabulary" = kryo
+        "com.netflix.atlas.core.model.MathExpr" = kryo
+        "com.netflix.atlas.core.model.MathVocabulary" = kryo
+        "com.netflix.atlas.core.model.ModelExtractors" = kryo
+        "com.netflix.atlas.core.model.package" = kryo
+        "com.netflix.atlas.core.model.Query" = kryo
+        "com.netflix.atlas.core.model.QueryVocabulary" = kryo
+        "com.netflix.atlas.core.model.ResultSet" = kryo
+        "com.netflix.atlas.core.model.StatefulExpr" = kryo
+        "com.netflix.atlas.core.model.StatefulVocabulary" = kryo
+        "com.netflix.atlas.core.model.StyleExpr" = kryo
+        "com.netflix.atlas.core.model.StyleVocabulary" = kryo
+        "com.netflix.atlas.core.model.SummaryStats" = kryo
+        "com.netflix.atlas.core.model.Tag" = kryo
+        "com.netflix.atlas.core.model.TaggedItem" = kryo
+        "com.netflix.atlas.core.model.TagKey" = kryo
         "com.netflix.atlas.core.model.TimeSeq" = kryo
+        "com.netflix.atlas.core.model.TimeSeries" = kryo
+        "com.netflix.atlas.core.model.TimeSeriesExpr" = kryo
         "com.netflix.atlas.core.model.FunctionTimeSeq" = kryo
         "com.netflix.atlas.core.model.ArrayTimeSeq" = kryo
         "com.netflix.atlas.core.model.OffsetTimeSeq" = kryo
@@ -119,54 +142,39 @@ akka {
         "com.netflix.atlas.core.model.DsType" = kryo
         "com.netflix.atlas.core.util.SmallHashMap" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardData" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedData" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTags" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagKeys" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagValues" = kryo
         "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
         "com.netflix.atlas.webapi.DatabaseProvider" = kryo
         "com.netflix.atlas.webapi.ExprApi" = kryo
         "com.netflix.atlas.webapi.GraphApi" = kryo
         "com.netflix.atlas.webapi.GraphRequestActor" = kryo
+        "com.netflix.atlas.webapi.GraphApi$DataResponse" = kryo
         "com.netflix.atlas.webapi.PublishApi" = kryo
         "com.netflix.atlas.webapi.RenderApi" = kryo
         "com.netflix.atlas.webapi.TagsApi" = kryo
+        "com.netflix.atlas.webapi.TagsApi$ValueListResponse" = kryo
+        "com.netflix.atlas.webapi.TagsApi$KeyListResponse" = kryo
+        "com.netflix.atlas.webapi.TagsApi$TagListResponse" = kryo
         "com.netflix.atlas.webapi.TagsRequestActor" = kryo
         "com.netflix.atlas.akka.ClusterMailbox" = kryo
-        //"spray.http.HttpResponse" = kryo
         "akka.actor.ActorRef" = kryo
       }
-      //default-mailbox {
-      //  mailbox-type = "akka.dispatch.BoundedDequeBasedMailbox"
-      //  mailbox-capacity = 2000
-      //  mailbox-push-timeout-time = 5s
-      //  path-pattern = ${atlas.akka.path-pattern}
-      //  requirements {
-      //    "akka.dispatch.BoundedDequeBasedMessageQueueSemantics" = akka.actor.mailbox.bounded-deque-based
-      //  }
-      //}
-      //default-mailbox {
-      //  mailbox-type = "akka.dispatch.BoundedDequeBasedMailbox"
-      //  mailbox-capacity = 2000
-      //  mailbox-push-timeout-time = 5s
-      //  path-pattern = ${atlas.akka.path-pattern}
-      //  //requirements {
-      //  //  "akka.dispatch.BoundedDequeBasedMessageQueueSemantics" = akka.actor.mailbox.bounded-deque-based
-      //  //}
-      //}
   }
 
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 2552
+      port = 2553
     }
   }
 
   cluster {
     roles = [ "front-end", "back-end" ]
-    //seed-nodes = [
-    //  "akka.tcp://"${application.name}"@"${clustering.ip}":2551"
-    //  "akka.tcp://"${application.name}"@"${clustering.ip}":2552"
-    //]
-     // "akka.tcp://atlas@127.0.0.1:2551",
     seed-nodes = [
       "akka.tcp://atlas@127.0.0.1:2552"
       "akka.tcp://atlas@127.0.0.1:2553"
@@ -178,12 +186,10 @@ akka {
 
 cluster-mailbox {
   mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
-  // path-pattern = ${atlas.akka.path-pattern}
-  path-pattern = "^akka://(?:[^/]+)/(?:system|user)/(?:sharding)/([^$].+?)(?:/.*)?$"
+  path-pattern = ${atlas.akka.path-pattern}
 }
 
 
-//akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
