--- a/memory.conf
+++ b/memory.conf
@@ -58,16 +58,19 @@ atlas {
   }
 
   akka {
-    atlascluster = [
-      {
-        name = "publish"
-        class = "com.netflix.atlas.webapi.ClusteredPublishActor"
-      },
-      {
-        name = "db"
-        class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
-      }
-    ]
+    atlascluster {
+      number-of-shards = 2
+      cluster = [
+        {
+          name = "publish"
+          class = "com.netflix.atlas.webapi.ClusteredPublishActor"
+        },
+        {
+          name = "db"
+          class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
+        }
+      ]
+    }
 
 
     api-endpoints = [
@@ -120,17 +123,24 @@ akka {
         "com.netflix.atlas.core.model.DsType" = kryo
         "com.netflix.atlas.core.util.SmallHashMap" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedData" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTags" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagKeys" = kryo
+        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagValues" = kryo
         "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
         "com.netflix.atlas.webapi.DatabaseProvider" = kryo
         "com.netflix.atlas.webapi.ExprApi" = kryo
         "com.netflix.atlas.webapi.GraphApi" = kryo
+        "com.netflix.atlas.webapi.GraphApi$DataResponse" = kryo
         "com.netflix.atlas.webapi.GraphRequestActor" = kryo
         "com.netflix.atlas.webapi.PublishApi" = kryo
         "com.netflix.atlas.webapi.RenderApi" = kryo
         "com.netflix.atlas.webapi.TagsApi" = kryo
+        "com.netflix.atlas.webapi.TagsApi$ValueListResponse" = kryo
+        "com.netflix.atlas.webapi.TagsApi$KeyListResponse" = kryo
+        "com.netflix.atlas.webapi.TagsApi$TagListResponse" = kryo
         "com.netflix.atlas.webapi.TagsRequestActor" = kryo
         "com.netflix.atlas.akka.ClusterMailbox" = kryo
-        //"spray.http.HttpResponse" = kryo
         "akka.actor.ActorRef" = kryo
       }
       //default-mailbox {
