--- a/cluster-example/cluster2/cluster2.conf
+++ b/cluster-example/cluster2/cluster2.conf
@@ -53,16 +53,19 @@ atlas {
   }
 
   akka {
-    atlascluster = [
-      {
-        name = "publish"
-        class = "com.netflix.atlas.webapi.ClusteredPublishActor"
-      },
-      {
-        name = "db"
-        class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
-      }
-    ]
+    atlascluster {
+      number-of-shards = 2
+      cluster = [
+        {
+          name = "publish"
+          class = "com.netflix.atlas.webapi.ClusteredPublishActor"
+        },
+        {
+          name = "db"
+          class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
+        }
+      ]
+    }
 
 
     api-endpoints = [
@@ -142,7 +145,6 @@ akka {
         "com.netflix.atlas.core.model.DsType" = kryo
         "com.netflix.atlas.core.util.SmallHashMap" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor" = kryo
-        "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardData" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedData" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTags" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagKeys" = kryo
