--- a/cluster-example/cluster1/cluster1.conf
+++ b/cluster-example/cluster1/cluster1.conf
@@ -149,6 +149,7 @@ akka {
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTags" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagKeys" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagValues" = kryo
+        "com.netflix.atlas.webapi.ClusteredPublishActor$IngestTaggedItem" = kryo
         "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
         "com.netflix.atlas.webapi.DatabaseProvider" = kryo
         "com.netflix.atlas.webapi.ExprApi" = kryo
@@ -164,6 +165,7 @@ akka {
         "com.netflix.atlas.webapi.TagsRequestActor" = kryo
         "com.netflix.atlas.akka.ClusterMailbox" = kryo
         "akka.actor.ActorRef" = kryo
+        "spray.http.HttpResponse" = kryo
       }
   }
 
