set allocation strategy to 2

--- a/cluster-example/cluster1/cluster1.conf
+++ b/cluster-example/cluster1/cluster1.conf
@@ -178,6 +178,17 @@ akka {
   }
 
   cluster {
+    sharding {
+       # Setting for the default shard allocation strategy
+       least-shard-allocation-strategy {
+         # Threshold of how large the difference between most and least number of
+         # allocated shards must be to begin the rebalancing.
+         rebalance-threshold = 2
+
+         # The number of ongoing rebalancing processes is limited to this number.
+         max-simultaneous-rebalance = 2
+      }
+    }
     roles = [ "front-end", "back-end" ]
     seed-nodes = [
       "akka.tcp://atlas@127.0.0.1:2552"
