add proxy option to split frontend/backend
in akka.altascluster.cluster, specifying proxy=on will allow a frontend
to connect to a backend, default is “off”

--- a/cluster-example/backend/backend.conf
+++ b/cluster-example/backend/backend.conf
@@ -81,12 +81,8 @@ atlas {
 
     api-endpoints = [
       "com.netflix.atlas.webapi.PublishApi",
-      "com.netflix.atlas.webapi.TagsApi",
-      "com.netflix.atlas.webapi.RenderApi",
-      "com.netflix.atlas.webapi.GraphApi",
       "com.netflix.atlas.akka.HealthcheckApi",
-      "com.netflix.atlas.akka.ConfigApi",
-      "com.netflix.atlas.akka.StaticPages"
+      "com.netflix.atlas.akka.ConfigApi"
     ]
     port = 7101
   }
@@ -195,7 +191,7 @@ akka {
   cluster {
     sharding {
        rebalance-interval = 30 s
-       remember-entities = on
+       remember-entities = off
        # Setting for the default shard allocation strategy
        least-shard-allocation-strategy {
          # Threshold of how large the difference between most and least number of
@@ -206,13 +202,11 @@ akka {
          max-simultaneous-rebalance = 2
       }
     }
-    roles = [ "front-end", "back-end" ]
+    roles = [ "backend" ]
     seed-nodes = [
       "akka.tcp://atlas@127.0.0.1:2552"
       "akka.tcp://atlas@127.0.0.1:2553"
     ]
-
-    auto-down-unreachable-after = 10s
   }
 }
 
