--- a/cluster-example/frontend/frontend.conf
+++ b/cluster-example/frontend/frontend.conf
@@ -31,25 +31,6 @@ atlas {
       // Change default start time on graph to smaller range more typical for testing
       start-time = e-30m
     }
-
-    publish {
-      // Max age for a datapoint. By default it is one step interval. If the timestamps are
-      // normalized locally on the client 2 times the step is likely more appropriate.s
-      max-age = 21600000
-      // increase default key length
-      rules = [
-        {
-          class = "com.netflix.atlas.core.validation.KeyLengthRule"
-          min-length = 2
-          max-length = 128
-        },
-        {
-          class = "com.netflix.atlas.core.validation.MaxUserTagsRule"
-          limit = 100
-        }
-      ]
-    }
-
   }
 
   akka {
@@ -58,20 +39,17 @@ atlas {
       cluster = [
         {
           name = "publish"
+          proxy = on
           class = "com.netflix.atlas.webapi.ClusteredPublishActor"
         },
         {
           name = "db"
+          proxy = on
           class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
         }
       ]
     }
 
-
-    #
-    # Default config will load a LocalDatabaseActor and DeadLetterStatsActor
-    # clear out the list and just add in DeadLetterStatsActor (may be able to drop it too)
-    #actors = []
     actors = [
       {
         name = "deadLetterStats"
@@ -80,7 +58,6 @@ atlas {
     ]
 
     api-endpoints = [
-      "com.netflix.atlas.webapi.PublishApi",
       "com.netflix.atlas.webapi.TagsApi",
       "com.netflix.atlas.webapi.RenderApi",
       "com.netflix.atlas.webapi.GraphApi",
@@ -88,7 +65,7 @@ atlas {
       "com.netflix.atlas.akka.ConfigApi",
       "com.netflix.atlas.akka.StaticPages"
     ]
-    port = 7101
+    port = 7201
   }
 }
 
@@ -195,7 +172,7 @@ akka {
   cluster {
     sharding {
        rebalance-interval = 30 s
-       remember-entities = on
+       remember-entities = off
        # Setting for the default shard allocation strategy
        least-shard-allocation-strategy {
          # Threshold of how large the difference between most and least number of
@@ -206,13 +183,12 @@ akka {
          max-simultaneous-rebalance = 2
       }
     }
-    roles = [ "front-end", "back-end" ]
+    roles = [ "frontend" ]
     seed-nodes = [
       "akka.tcp://atlas@127.0.0.1:2552"
       "akka.tcp://atlas@127.0.0.1:2553"
     ]
 
-    auto-down-unreachable-after = 10s
   }
 }
 
@@ -220,9 +196,3 @@ cluster-mailbox {
   mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
   path-pattern = ${atlas.akka.path-pattern}
 }
-
-
-akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-akka.persistence.journal.leveldb.dir = "target/journal"
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
