--- a/cluster-example/backend/backend.conf
+++ b/cluster-example/backend/backend.conf
@@ -58,10 +58,12 @@ atlas {
       cluster = [
         {
           name = "publish"
+          proxy = off
           class = "com.netflix.atlas.webapi.ClusteredPublishActor"
         },
         {
           name = "db"
+          proxy = off
           class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
         }
       ]
