implemented shared journal for shard recovery

--- a/cluster-example/frontend/fe.conf
+++ b/cluster-example/frontend/fe.conf
@@ -5,17 +5,17 @@ atlas {
 
   core {
     model {
-      step = 1s
+      step = 60s
     }
 
     db {
       class = "com.netflix.atlas.core.db.MemoryDatabase"
 
       // How often to rebuild the index for the memory database
-      rebuild-frequency = 5s
+      rebuild-frequency = 30s
 
       // 1h with 60s step
-      block-size = 600
+      block-size = 60
 
       // 6h of data overall
       num-blocks = 6
@@ -53,27 +53,8 @@ atlas {
   }
 
   akka {
-    atlascluster {
-      number-of-shards = 4
-      cluster = [
-        {
-          name = "publish"
-          proxy = off
-          class = "com.netflix.atlas.webapi.ClusteredPublishActor"
-        },
-        {
-          name = "db"
-          proxy = off
-          class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
-        }
-      ]
-    }
+    port = 9090
 
-
-    #
-    # Default config will load a LocalDatabaseActor and DeadLetterStatsActor
-    # clear out the list and just add in DeadLetterStatsActor (may be able to drop it too)
-    #actors = []
     actors = [
       {
         name = "deadLetterStats"
@@ -90,7 +71,23 @@ atlas {
       "com.netflix.atlas.akka.ConfigApi",
       "com.netflix.atlas.akka.StaticPages"
     ]
-    port = 7101
+
+    atlascluster {
+      number-of-shards = 3
+      cluster = [
+        {
+          name = "publish"
+          proxy = yes
+          class = "com.netflix.atlas.webapi.ClusteredPublishActor"
+        },
+        {
+          name = "db"
+          proxy = yes
+          class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
+        }
+      ]
+    }
+
   }
 }
 
@@ -167,8 +164,6 @@ akka {
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagValues" = kryo
         "com.netflix.atlas.webapi.ClusteredPublishActor$IngestTaggedItem" = kryo
         "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
-        "com.netflix.atlas.webapi.ClusterPublishEvt" = kryo
-        "com.netflix.atlas.webapi.ClusterDatabaseEvt" = kryo
         "com.netflix.atlas.webapi.DatabaseProvider" = kryo
         "com.netflix.atlas.webapi.ExprApi" = kryo
         "com.netflix.atlas.webapi.GraphApi" = kryo
@@ -190,37 +185,34 @@ akka {
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
-      hostname = "127.0.0.1"
-      port = 2552
+      hostname = 127.0.0.1
+      port = 2554
     }
   }
 
   # See http://doc.akka.io/docs/akka/snapshot/scala/cluster-sharding.html
   cluster {
     sharding {
-       rebalance-interval = 10 s
-       remember-entities = on
+       rebalance-interval = 30s
+       remember-entities = off
        # Setting for the default shard allocation strategy
        least-shard-allocation-strategy {
          # Threshold of how large the difference between most and least number of
          # allocated shards must be to begin the rebalancing.
-         rebalance-threshold = 1
-
+         rebalance-threshold = 2
          # The number of ongoing rebalancing processes is limited to this number.
          max-simultaneous-rebalance = 1
       }
-      entity-recovery-strategy = "all"
-      coordinator-singleton = ${akka.cluster.singleton}
-
     }
-    roles = [ "backend" ]
+    roles = [ "frontend" ]
+
+    # primary seed node MUST come first in the list and be consistent across all nodes
     seed-nodes = [
       "akka.tcp://atlas@127.0.0.1:2552"
       "akka.tcp://atlas@127.0.0.1:2553"
     ]
-
-    auto-down-unreachable-after = 10s
   }
+
 }
 
 cluster-mailbox {
@@ -228,54 +220,8 @@ cluster-mailbox {
   path-pattern = ${atlas.akka.path-pattern}
 }
 
-#akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-#akka.persistence.journal.leveldb.dir = "target/journal"
 
-#akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-#akka.persistence.snapshot-store.local.dir = "target/snapshots"
-
-# shared journal proxy
-#akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-#akka.persistence.journal.leveldb.dir = "target/journal"
-
-
-akka {
-  persistence {
-    journal {
-      #plugin = "akka.persistence.journal.leveldb"
-      plugin = "akka.persistence.journal.proxy"
-      leveldb {
-        dir = "proxyjournal"
-        # Class name of the plugin.
-        class = "akka.persistence.journal.leveldb.LeveldbJournal"
-        # Dispatcher for the plugin actor.
-        plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
-        # Dispatcher for message replay.
-        replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
-        # Storage location of LevelDB files.
-        # Use fsync on write.
-        fsync = on
-        # Verify checksum on read.
-        checksum = off
-        # Native LevelDB (via JNI) or LevelDB Java port.
-        native = on
-      }
-      proxy {
-        # Class name of the plugin.
-        class = "akka.persistence.journal.PersistencePluginProxy"
-        # Dispatcher for the plugin actor.
-        plugin-dispatcher = "akka.actor.default-dispatcher"
-        # Set this to on in the configuration of the ActorSystem
-        # that will host the target journal
-        start-target-journal = on
-        # The journal plugin config path to use for the target journal
-        target-journal-plugin = "akka.persistence.journal.leveldb"
-        # The address of the proxy to connect to from other nodes. Optional setting.
-        target-journal-address = "akka.tcp://atlas@127.0.0.1:2552"
-        # Initialization timeout of target lookup
-        init-timeout = 10s
-      }
-    }
-  }
-}
-
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
+akka.persistence.journal.leveldb.dir = "/atlas-data/journal"
+akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+akka.persistence.snapshot-store.local.dir = "/atlas-data/snapshots"
