--- a/cluster-example/cluster2/cluster2.conf
+++ b/cluster-example/cluster2/cluster2.conf
@@ -5,7 +5,7 @@ atlas {
 
   core {
     model {
-      step = 60s
+      step = 1s
     }
 
     db {
@@ -15,7 +15,7 @@ atlas {
       rebuild-frequency = 5s
 
       // 1h with 60s step
-      block-size = 60
+      block-size = 600
 
       // 6h of data overall
       num-blocks = 6
@@ -54,19 +54,32 @@ atlas {
 
   akka {
     atlascluster {
-      number-of-shards = 2
+      number-of-shards = 4
       cluster = [
         {
           name = "publish"
+          proxy = off
           class = "com.netflix.atlas.webapi.ClusteredPublishActor"
         },
         {
           name = "db"
+          proxy = off
           class = "com.netflix.atlas.webapi.ClusteredDatabaseActor"
         }
       ]
     }
 
+
+    #
+    # Default config will load a LocalDatabaseActor and DeadLetterStatsActor
+    # clear out the list and just add in DeadLetterStatsActor (may be able to drop it too)
+    #actors = []
+    actors = [
+      {
+        name = "deadLetterStats"
+        class = "com.netflix.atlas.akka.DeadLetterStatsActor"
+      }
+    ]
 
     api-endpoints = [
       "com.netflix.atlas.webapi.PublishApi",
@@ -86,7 +99,10 @@ akka {
   actor {
       provider = "akka.cluster.ClusterActorRefProvider"
       default-dispatcher {
-        throughput = 1
+        throughput = 5
+        fork-join-executor {
+          parallelism-factor = 16.0
+        }
       }
       deployment {
         default {
@@ -149,8 +165,10 @@ akka {
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTags" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagKeys" = kryo
         "com.netflix.atlas.webapi.ClusteredDatabaseActor$GetShardedTagValues" = kryo
-        "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
         "com.netflix.atlas.webapi.ClusteredPublishActor$IngestTaggedItem" = kryo
+        "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
+        "com.netflix.atlas.webapi.ClusterPublishEvt" = kryo
+        "com.netflix.atlas.webapi.ClusterDatabaseEvt" = kryo
         "com.netflix.atlas.webapi.DatabaseProvider" = kryo
         "com.netflix.atlas.webapi.ExprApi" = kryo
         "com.netflix.atlas.webapi.GraphApi" = kryo
@@ -177,19 +195,25 @@ akka {
     }
   }
 
+  # See http://doc.akka.io/docs/akka/snapshot/scala/cluster-sharding.html
   cluster {
     sharding {
+       rebalance-interval = 10 s
+       remember-entities = on
        # Setting for the default shard allocation strategy
        least-shard-allocation-strategy {
          # Threshold of how large the difference between most and least number of
          # allocated shards must be to begin the rebalancing.
-         rebalance-threshold = 2
- 
+         rebalance-threshold = 1
+
          # The number of ongoing rebalancing processes is limited to this number.
-         max-simultaneous-rebalance = 2
+         max-simultaneous-rebalance = 1
       }
+      entity-recovery-strategy = "all"
+      coordinator-singleton = ${akka.cluster.singleton}
+
     }
-    roles = [ "front-end", "back-end" ]
+    roles = [ "backend" ]
     seed-nodes = [
       "akka.tcp://atlas@127.0.0.1:2552"
       "akka.tcp://atlas@127.0.0.1:2553"
@@ -204,8 +228,70 @@ cluster-mailbox {
   path-pattern = ${atlas.akka.path-pattern}
 }
 
+#akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
+#akka.persistence.journal.leveldb.dir = "target/journal"
 
-akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-akka.persistence.journal.leveldb.dir = "target/journal"
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
+#akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+#akka.persistence.snapshot-store.local.dir = "target/snapshots"
+
+# shared journal proxy
+#akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
+#akka.persistence.journal.leveldb.dir = "target/journal"
+
+
+akka {
+  persistence {
+    journal {
+      #plugin = "akka.persistence.journal.leveldb"
+      plugin = "akka.persistence.journal.proxy"
+      leveldb {
+        dir = "proxyjournal"
+        # Class name of the plugin.
+        class = "akka.persistence.journal.leveldb.LeveldbJournal"
+        # Dispatcher for the plugin actor.
+        plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
+        # Dispatcher for message replay.
+        replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+        # Storage location of LevelDB files.
+        # Use fsync on write.
+        fsync = on
+        # Verify checksum on read.
+        checksum = off
+        # Native LevelDB (via JNI) or LevelDB Java port.
+        native = on
+      }
+      proxy {
+        # Class name of the plugin.
+        class = "akka.persistence.journal.PersistencePluginProxy"
+        # Dispatcher for the plugin actor.
+        plugin-dispatcher = "akka.actor.default-dispatcher"
+        # Set this to on in the configuration of the ActorSystem
+        # that will host the target journal
+        start-target-journal = off
+        # The journal plugin config path to use for the target journal
+        target-journal-plugin = "akka.persistence.journal.leveldb"
+        # The address of the proxy to connect to from other nodes. Optional setting.
+        target-journal-address = "akka.tcp://atlas@127.0.0.1:2552"
+        # Initialization timeout of target lookup
+        init-timeout = 10s
+      }
+    }
+  }
+}
+
+
+#akka.persistence.journal.proxy {
+#  # Class name of the plugin.
+#  class = "akka.persistence.journal.PersistencePluginProxy"
+#  # Dispatcher for the plugin actor.
+#  plugin-dispatcher = "akka.actor.default-dispatcher"
+#  # Set this to on in the configuration of the ActorSystem
+#  # that will host the target journal
+#  start-target-journal = off
+#  # The journal plugin config path to use for the target journal
+#  target-journal-plugin = "akka.persistence.journal.leveldb"
+#  # The address of the proxy to connect to from other nodes. Optional setting.
+#  target-journal-address = "127.0.0.1:2552"
+#  # Initialization timeout of target lookup
+#  init-timeout = 10s
+#}
