now supports shared journal and snapshot recovery to restore state of shards

--- a/cluster-example/cluster1/cluster1-shared-journal.conf
+++ b/cluster-example/cluster1/cluster1-shared-journal.conf
@@ -73,13 +73,13 @@ atlas {
     #
     # Default config will load a LocalDatabaseActor and DeadLetterStatsActor
     # clear out the list and just add in DeadLetterStatsActor (may be able to drop it too)
-    #actors = []
-    actors = [
-      {
-        name = "deadLetterStats"
-        class = "com.netflix.atlas.akka.DeadLetterStatsActor"
-      }
-    ]
+    actors = []
+    #actors = [
+    #  {
+    #    name = "deadLetterStats"
+    #    class = "com.netflix.atlas.akka.DeadLetterStatsActor"
+    #  }
+    #]
 
     api-endpoints = [
       "com.netflix.atlas.webapi.PublishApi",
@@ -94,14 +94,29 @@ atlas {
   }
 }
 
+atlas.akka.name = "ClusterService"
+akka.actor.debug.lifecycle = on
+akka.actor.debug.receive = on
+akka.actor.debug.autoreceive = on
+akka.actor.debug.event-stream = on
+akka.actor.debug.unhandled = on
+
+# Eager initialize persistence
+akka {
+  extensions = [
+    "akka.persistence.Persistence"
+  ]
+}
 
 akka {
   actor {
       provider = "akka.cluster.ClusterActorRefProvider"
       default-dispatcher {
-        throughput = 5
+        executor = "thread-pool-executor"
+
+        throughput = 1
         fork-join-executor {
-          parallelism-factor = 16.0
+          parallelism-factor = 4.0
         }
       }
       deployment {
@@ -169,6 +184,7 @@ akka {
         "com.netflix.atlas.webapi.ClusteredPublishActor" = kryo
         "com.netflix.atlas.webapi.ClusterPublishEvt" = kryo
         "com.netflix.atlas.webapi.ClusterDatabaseEvt" = kryo
+        "com.netflix.atlas.webapi.ClusterPublishState" = kryo
         "com.netflix.atlas.webapi.DatabaseProvider" = kryo
         "com.netflix.atlas.webapi.ExprApi" = kryo
         "com.netflix.atlas.webapi.GraphApi" = kryo
@@ -215,8 +231,8 @@ akka {
     }
     roles = [ "backend" ]
     seed-nodes = [
-      "akka.tcp://atlas@127.0.0.1:2552"
-      "akka.tcp://atlas@127.0.0.1:2553"
+      "akka.tcp://ClusterService@127.0.0.1:2552"
+      #"akka.tcp://atlas@127.0.0.1:2553"
     ]
 
     auto-down-unreachable-after = 10s
@@ -238,6 +254,8 @@ cluster-mailbox {
 #akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 #akka.persistence.journal.leveldb.dir = "target/journal"
 
+akka.persistence.journal.auto-start-journals = [ "akka.persistence.journal.leveldb" ]
+akka.persistence.snapshot-store.auto-start-snapshot-stores = [ "akka.persistence.snapshot-store.local" ]
 
 akka {
   persistence {
@@ -276,6 +294,26 @@ akka {
         init-timeout = 10s
       }
     }
+    snapshot-store {
+      plugin = "akka.persistence.snapshot-store.proxy"
+      local {
+        dir = "proxysnapshot"
+      }
+      proxy {
+        # Class name of the plugin.
+        class = "akka.persistence.journal.PersistencePluginProxy"
+        # Dispatcher for the plugin actor.
+        plugin-dispatcher = "akka.actor.default-dispatcher"
+        # Set this to on in the configuration of the ActorSystem
+        # that will host the target snapshot-store
+        start-target-snapshot-store = on
+        # The journal plugin config path to use for the target snapshot-store
+        target-snapshot-store-plugin = "akka.persistence.snapshot-store.local"
+        # The address of the proxy to connect to from other nodes. Optional setting.
+        target-snapshot-store-address = "akka.tcp://atlas@127.0.0.1:2552"
+        # Initialization timeout of target lookup
+        init-timeout = 10s
+      }
+    }
   }
 }
-
