changed to 2hr storage

--- a/cluster-example/cluster1/cluster1-shared-journal.conf
+++ b/cluster-example/cluster1/cluster1-shared-journal.conf
@@ -15,10 +15,10 @@ atlas {
       rebuild-frequency = 5s
 
       // 1h with 60s step
-      block-size = 600
+      block-size = 360
 
-      // 6h of data overall
-      num-blocks = 6
+      // 2h of data overall
+      num-blocks = 2
     }
   }
 
@@ -100,13 +100,6 @@ akka.actor.debug.receive = on
 akka.actor.debug.autoreceive = on
 akka.actor.debug.event-stream = on
 akka.actor.debug.unhandled = on
-
-# Eager initialize persistence
-akka {
-  extensions = [
-    "akka.persistence.Persistence"
-  ]
-}
 
 akka {
   actor {
@@ -235,7 +228,7 @@ akka {
       #"akka.tcp://atlas@127.0.0.1:2553"
     ]
 
-    auto-down-unreachable-after = 10s
+    #auto-down-unreachable-after = 10s
   }
 }
 
@@ -243,19 +236,6 @@ cluster-mailbox {
   mailbox-type = "com.netflix.atlas.akka.ClusterMailbox"
   path-pattern = ${atlas.akka.path-pattern}
 }
-
-#akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-#akka.persistence.journal.leveldb.dir = "target/journal"
-
-#akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-#akka.persistence.snapshot-store.local.dir = "target/snapshots"
-
-# shared journal proxy
-#akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-#akka.persistence.journal.leveldb.dir = "target/journal"
-
-akka.persistence.journal.auto-start-journals = [ "akka.persistence.journal.leveldb" ]
-akka.persistence.snapshot-store.auto-start-snapshot-stores = [ "akka.persistence.snapshot-store.local" ]
 
 akka {
   persistence {
@@ -317,3 +297,14 @@ akka {
     }
   }
 }
+
+# Eager initialize persistence
+akka {
+  extensions = [
+    "akka.persistence.Persistence"
+  ]
+}
+
+akka.persistence.journal.auto-start-journals = [ "akka.persistence.journal.leveldb" ]
+akka.persistence.snapshot-store.auto-start-snapshot-stores = [ "akka.persistence.snapshot-store.local" ]
+
