--- a/cluster-example/cluster1/cluster1-shared-journal.conf
+++ b/cluster-example/cluster1/cluster1-shared-journal.conf
@@ -213,7 +213,7 @@ akka {
        least-shard-allocation-strategy {
          # Threshold of how large the difference between most and least number of
          # allocated shards must be to begin the rebalancing.
-         rebalance-threshold = 1
+         rebalance-threshold = 2
 
          # The number of ongoing rebalancing processes is limited to this number.
          max-simultaneous-rebalance = 1
@@ -225,7 +225,7 @@ akka {
     roles = [ "backend" ]
     seed-nodes = [
       "akka.tcp://ClusterService@127.0.0.1:2552"
-      #"akka.tcp://atlas@127.0.0.1:2553"
+      #"akka.tcp://ClusterService@127.0.0.1:2553"
     ]
 
     #auto-down-unreachable-after = 10s
