configs for two nodes using redis and shared journal persistence

--- a/cluster-example/cluster1/cluster1-shared-journal.conf
+++ b/cluster-example/cluster1/cluster1-shared-journal.conf
@@ -15,7 +15,7 @@ atlas {
       rebuild-frequency = 5s
 
       // 1h with 60s step
-      block-size = 360
+      block-size = 3600
 
       // 2h of data overall
       num-blocks = 2
@@ -225,7 +225,7 @@ akka {
     roles = [ "backend" ]
     seed-nodes = [
       "akka.tcp://ClusterService@127.0.0.1:2552"
-      #"akka.tcp://ClusterService@127.0.0.1:2553"
+      "akka.tcp://ClusterService@127.0.0.1:2553"
     ]
 
     #auto-down-unreachable-after = 10s
@@ -307,4 +307,3 @@ akka {
 
 akka.persistence.journal.auto-start-journals = [ "akka.persistence.journal.leveldb" ]
 akka.persistence.snapshot-store.auto-start-snapshot-stores = [ "akka.persistence.snapshot-store.local" ]
-
