--- a/cluster-example/cluster2/cluster2-shared-journal.conf
+++ b/cluster-example/cluster2/cluster2-shared-journal.conf
@@ -73,13 +73,13 @@ atlas {
     #
     # Default config will load a LocalDatabaseActor and DeadLetterStatsActor
     # clear out the list and just add in DeadLetterStatsActor (may be able to drop it too)
-    # actors = []
-    actors = [
-      {
-        name = "deadLetterStats"
-        class = "com.netflix.atlas.akka.DeadLetterStatsActor"
-      }
-    ]
+    actors = []
+    #actors = [
+    #  {
+    #    name = "deadLetterStats"
+    #    class = "com.netflix.atlas.akka.DeadLetterStatsActor"
+    #  }
+    #]
 
     api-endpoints = [
       "com.netflix.atlas.webapi.PublishApi",
@@ -90,7 +90,7 @@ atlas {
       "com.netflix.atlas.akka.ConfigApi",
       "com.netflix.atlas.akka.StaticPages"
     ]
-    port = 7101
+    port = 8101
   }
 }
 
@@ -100,7 +100,6 @@ akka.actor.debug.receive = on
 akka.actor.debug.autoreceive = on
 akka.actor.debug.event-stream = on
 akka.actor.debug.unhandled = on
-
 
 akka {
   actor {
@@ -201,14 +200,14 @@ akka {
     log-remote-lifecycle-events = off
     netty.tcp {
       hostname = "127.0.0.1"
-      port = 2552
+      port = 2553
     }
   }
 
   # See http://doc.akka.io/docs/akka/snapshot/scala/cluster-sharding.html
   cluster {
     sharding {
-       rebalance-interval = 30 s
+       rebalance-interval = 10 s
        remember-entities = on
        # Setting for the default shard allocation strategy
        least-shard-allocation-strategy {
@@ -238,6 +237,67 @@ cluster-mailbox {
   path-pattern = ${atlas.akka.path-pattern}
 }
 
+akka {
+  persistence {
+    journal {
+      #plugin = "akka.persistence.journal.leveldb"
+      plugin = "akka.persistence.journal.proxy"
+      leveldb {
+        dir = "proxyjournal"
+        # Class name of the plugin.
+        class = "akka.persistence.journal.leveldb.LeveldbJournal"
+        # Dispatcher for the plugin actor.
+        plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
+        # Dispatcher for message replay.
+        replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+        # Storage location of LevelDB files.
+        # Use fsync on write.
+        fsync = on
+        # Verify checksum on read.
+        checksum = off
+        # Native LevelDB (via JNI) or LevelDB Java port.
+        native = on
+      }
+      proxy {
+        # Class name of the plugin.
+        class = "akka.persistence.journal.PersistencePluginProxy"
+        # Dispatcher for the plugin actor.
+        plugin-dispatcher = "akka.actor.default-dispatcher"
+        # Set this to on in the configuration of the ActorSystem
+        # that will host the target journal
+        start-target-journal = on
+        # The journal plugin config path to use for the target journal
+        target-journal-plugin = "akka.persistence.journal.leveldb"
+        # The address of the proxy to connect to from other nodes. Optional setting.
+        target-journal-address = "akka.tcp://atlas@127.0.0.1:2552"
+        # Initialization timeout of target lookup
+        init-timeout = 10s
+      }
+    }
+    snapshot-store {
+      plugin = "akka.persistence.snapshot-store.proxy"
+      local {
+        dir = "proxysnapshot"
+      }
+      proxy {
+        # Class name of the plugin.
+        class = "akka.persistence.journal.PersistencePluginProxy"
+        # Dispatcher for the plugin actor.
+        plugin-dispatcher = "akka.actor.default-dispatcher"
+        # Set this to on in the configuration of the ActorSystem
+        # that will host the target snapshot-store
+        start-target-snapshot-store = on
+        # The journal plugin config path to use for the target snapshot-store
+        target-snapshot-store-plugin = "akka.persistence.snapshot-store.local"
+        # The address of the proxy to connect to from other nodes. Optional setting.
+        target-snapshot-store-address = "akka.tcp://atlas@127.0.0.1:2552"
+        # Initialization timeout of target lookup
+        init-timeout = 10s
+      }
+    }
+  }
+}
+
 # Eager initialize persistence
 akka {
   extensions = [
@@ -245,44 +305,5 @@ akka {
   ]
 }
 
-# redis persistence
-#akka.persistence.journal.plugin = "akka-persistence-redis.journal"
-#akka.persistence.snapshot-store.plugin = "akka-persistence-redis.snapshot"
-
-# eager start journal and snapshot
-#akka.persistence.journal.auto-start-journals = [ "akka-persistence-redis.journal" ]
-#akka.persistence.snapshot-store.auto-start-snapshot-stores = [ "akka-persistence-redis.snapshot" ]
-
-akka {
-  persistence {
-    journal {
-      plugin = "akka-persistence-redis.journal"
-    }
-    snapshot-store {
-      plugin = "akka-persistence-redis.snapshot"
-    }
-  }
-}
-akka-persistence-redis {
-  journal {
-    class = "com.hootsuite.akka.persistence.redis.journal.RedisJournal"
-    key-namespace = "atlas-journal"
-  }
-  snapshot {
-    class = "com.hootsuite.akka.persistence.redis.snapshot.RedisSnapshotStore"
-    key-namespace = "atlas-snapshot"
-  }
-}
-
-redis {
-  host = "localhost"
-  port = 6379
-  # optional
-  #password="topsecret"
-}
-
-#redis {
-#  sentinel = true
-#  sentinel-master = "mymaster"  //master name
-#  sentinels = [{host :"localhost", port: 26379}] // list of sentinel addresses
-#}
+akka.persistence.journal.auto-start-journals = [ "akka.persistence.journal.leveldb" ]
+akka.persistence.snapshot-store.auto-start-snapshot-stores = [ "akka.persistence.snapshot-store.local" ]
