Now manages journal size via snapshot tracking, new configurable retention setting added

--- a/cluster-example/cluster2/cluster2-redis-journal.conf
+++ b/cluster-example/cluster2/cluster2-redis-journal.conf
@@ -55,6 +55,8 @@ atlas {
   akka {
     atlascluster {
       number-of-shards = 4
+      retain-minutes = 120
+
       cluster = [
         {
           name = "publish"
@@ -245,9 +247,6 @@ akka {
   ]
 }
 
-# redis persistence
-#akka.persistence.journal.plugin = "akka-persistence-redis.journal"
-#akka.persistence.snapshot-store.plugin = "akka-persistence-redis.snapshot"
 
 # eager start journal and snapshot
 #akka.persistence.journal.auto-start-journals = [ "akka-persistence-redis.journal" ]
@@ -257,9 +256,13 @@ akka {
   persistence {
     journal {
       plugin = "akka-persistence-redis.journal"
+      # eager start the journal
+      auto-start-journals = [ "akka-persistence-redis.journal" ]
     }
     snapshot-store {
       plugin = "akka-persistence-redis.snapshot"
+      # eager start the snapshot store
+      auto-start-snapshot-stores = [ "akka-persistence-redis.snapshot" ]
     }
   }
 }
